# FocusLab

./: .gitignore  AGENTS.md  FocusLab 设计文档.md  FocusLab-主题预览.html  RELEASING.md  bubble.html  command-palette.html  index.html  package.json  pnpm-lock.yaml  quick-add.html  quick-note.html  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  我想做一款产品，这是未完成的设计文档以及部分要求： --- ## 一、你新增的功能点评价.md  科研灵感图谱功能设计文档_v0.3.md
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: local_quotes.rs  mod.rs  prompt_templates.rs  streaming.rs
src-tauri/src/ai/quotes/: daily_suggestion.json  settlement.json  task_feedback.json  unfinished_reminder.json  (+1 more)
src-tauri/src/commands/: ai_commands.rs  ai_profile_commands.rs  assignment_commands.rs  chat_commands.rs  export_commands.rs  focus_commands.rs  goal_commands.rs  inspiration_commands.rs  interruption_commands.rs  mod.rs  recovery_commands.rs  settings_commands.rs  settlement_commands.rs  stats_commands.rs  task_commands.rs  timer_commands.rs  window_commands.rs
src-tauri/src/db/: migrator.rs  mod.rs
src-tauri/src/models/: ai_chat.rs  ai_profile.rs  daily_task_assignment.rs  goal.rs  inspiration.rs  interruption.rs  milestone.rs  milestone_note.rs  mod.rs  session.rs  settings.rs  settlement.rs  task.rs  timer_state.rs
src-tauri/src/services/: inspiration_service.rs  mod.rs  timer_service.rs
src-tauri/src/system/: mod.rs  tray.rs
src-tauri/src/utils/: datetime.rs  errors.rs  mod.rs
(+215 files in other folders)
